services/syra-ingress/syra-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: syra-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.syra.live
      http:
        paths:
          - backend:
              serviceName: syra-live-gql
              servicePort: 80
    #- host: daw.syra.live
    #  http:
    #    paths:
    #      - backend:
    #          serviceName: hello-kubernetes-second
    #          servicePort: 80
    - host: syra.live
      http:
        paths:
            - backend:
                serviceName: syra-live-fe
                servicePort: 80
